fix(a11y): Better color contrast

--- a/src/components/pages/data/charts/map.module.scss
+++ b/src/components/pages/data/charts/map.module.scss
@@ -1,5 +1,5 @@
-$color-falling: #8ae8c2;
-$color-rising: #fead82;
+$color-falling: $qualitative-color-palette-200;
+$color-rising: $qualitative-color-palette-400;
 $color-unchanged: #d3d7d7;
 
 .row {
